# mcp-audit

./: .gitignore  .graphifyignore  README.md  pyproject.toml
.code-reviews/: 2026-05-14.md  2026-05-21.md  2026-05-28.md  2026-06-04.md  2026-06-11.md  2026-06-18.md  2026-06-25.md  2026-07-02.md
audit/: ast_scan.py  cli.py  findings.py  report.py
examples/: jarvis-trading-mcp-audit.md
graphify-out/: GRAPH_REPORT.md  graph.json  manifest.json
tests/: test_audit.py
tests/fixtures/bad_mcp/: pyproject.toml  server.py
tests/fixtures/clean_mcp/: pyproject.toml  server.py
